# low-cost-sensor-water-loop-ai

./: .gitignore  AGENTS.md  CODEGRAPH.md  CONTEXT.md  LICENSE  README.md  _总目录.md  codegraph.config.json  pyproject.toml  requirements.txt  操作记录.md  来源记录.md
00_项目入口与说明/: 后续更新规则.md  阅读顺序.md
deliverables/: README.md  _目录说明.md  artifact_index.md  calibration_task_board.md  catalyst_activity_proxy.md  claim_specific_field_package.md  deck_claim_spine.md  deck_design_system.md  deck_qa_checklist.md  engineering_execution_constraints.md  executive_brief.md  field_calibration_protocol.md  field_calibration_runbook.md  field_data_acceptance_gates.md  field_replay_calibration_gate.md  field_replay_evidence_chain.md  field_replay_import_protocol.md  field_validation_queue_alignment.md  figure_specs.md  grey_box_dynamic_latency.md  key_metrics_table.md  knowledge_graph_curation.md  knowledge_graph_reasoning.md  knowledge_graph_schema.md  literature_evidence_matrix.md  literature_evidence_schema.md  main_chain_reconnection.md  manifest.json  matrix_shock_fast_proxy_control.md  minimal_grey_box_physics.md  model_realism_audit.md  model_upgrade_backlog.md  multi_facility_collaborative_control.md  multi_facility_replay_evaluation.md  presentation_outline.md  project_book_sections.md  sensor_network_sparse_placement.md  slide_narrative_script.md  soft_sensor_conformal_calibration.md  soft_sensor_field_holdout_gate.md  (+5 more)
docs/: _目录说明.md  agent_system_spec.md  build_research_plan_docx.py  field_data_interface_spec.md  project_overview_28_agent.md  研究方案_Word兼容版.docx
experiments/: _目录说明.md  (+94 more)
(+668 files in other folders)
